--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2846,14 +2846,24 @@
 		justify-content: center;
 		width: calc(100% + 3em);
 		margin: 0 0 1em -3em;
+		/*width: calc(100%);
+		margin: 0 0 1em 0;*/
 		padding: 0;
 		list-style: none;
 		display:inline-block;
 	}
 
+		#pub_text {
+			width: calc(63%);
+		}
+
 		.features h3{
 			margin-bottom: 0;
 			font-weight: 500;
+		}
+
+		.features p{
+			margin-bottom: 0;
 		}
 
 		.features a{
@@ -2862,7 +2872,7 @@
 
 
 		#NTHU_logo {
-			width: calc(22%);
+			width: calc(23%);
 			margin-left: 3em;
 			margin-bottom: 2em;
 			padding: 0;
@@ -2880,6 +2890,7 @@
 			padding: 0;
 			display:inline-block;
    			vertical-align:middle;
+   			/*float: left;*/
 		}
 
 			.features li:nth-child(1), .features li:nth-child(2), .features li:nth-child(3) {
@@ -2897,6 +2908,10 @@
 				width: calc(28%);
 			}	
 
+			#pub_text {
+				width: calc(80%);
+			}	
+
 				.features li:nth-child(3) {
 					margin-top: 3em;
 				}
@@ -2906,8 +2921,13 @@
 		@media screen and (max-width: 736px) {
 
 			#NTHU_logo {
-				width: calc(35%);
+				width: calc(40%);
 			}
+
+			#pub_text {
+				width: calc(90%);
+			}	
+
 
 				.features li:nth-child(3) {
 					margin-top: 3em;
@@ -2918,8 +2938,12 @@
 		@media screen and (max-width: 480px) {
 
 			#NTHU_logo {
-				width: calc(45%);
+				width: calc(55%);
 			}
+
+			#pub_text {
+				width: calc(93%);
+			}	
 
 				.features li:nth-child(3) {
 					margin-top: 3em;
