--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1908,10 +1908,11 @@
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 300;
-		height: 2.75em;
-		line-height: 2.75em;
-		min-width: 9.25em;
-		padding: 0 1.5em;
+		height: 2.3em;
+		line-height: 2.3em;
+		min-width: 6.25em;
+		padding: 0em 1em 0em 1em;
+		margin-top: 0.5em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -1922,7 +1923,7 @@
 		input[type="button"].icon,
 		button.icon,
 		.button.icon {
-			padding-left: 1.35em;
+			padding-left: 1em;
 		}
 
 			input[type="submit"].icon:before,
@@ -1948,7 +1949,8 @@
 		input[type="button"].small,
 		button.small,
 		.button.small {
-			font-size: 0.8em;
+			font-size: 14px;
+			font-weight: 300;
 		}
 
 		input[type="submit"].big,
@@ -1993,7 +1995,7 @@
 	button,
 	.button {
 		background-color: transparent;
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.35);
+		box-shadow: inset 0 0 0 0.5px rgba(255, 255, 255, 0.35);
 		color: #ffffff !important;
 	}
 
