--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1908,11 +1908,12 @@
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 300;
-		height: 2.3em;
-		line-height: 2.3em;
-		min-width: 6.25em;
-		padding: 0em 1em 0em 1em;
+		height: 2.1em;
+		line-height: 2.1em;
+		min-width: 5em;
+		padding: 0em 0.7em 0em 0.7em;
 		margin-top: 0.5em;
+		margin-right: 0.25em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -1923,7 +1924,7 @@
 		input[type="button"].icon,
 		button.icon,
 		.button.icon {
-			padding-left: 1em;
+			padding-left: 0.7em;
 		}
 
 			input[type="submit"].icon:before,
@@ -1949,8 +1950,8 @@
 		input[type="button"].small,
 		button.small,
 		.button.small {
-			font-size: 14px;
-			font-weight: 300;
+			font-size: 0.9em;
+			/*font-weight: 300;*/
 		}
 
 		input[type="submit"].big,
@@ -3479,7 +3480,8 @@
 		#main button,
 		#main .button {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 1px #dddddd;
+			/*background-color: #99b3e6;*/
+			box-shadow: inset 0 0 0 0 #dddddd;
 			color: #636363 !important;
 		}
 
@@ -3512,7 +3514,8 @@
 			#main input[type="button"].special,
 			#main button.special,
 			#main .button.special {
-				background-color: #8cc9f0;
+				/*background-color: #8cc9f0;*/
+				background-color: #9fc6df;
 				color: #ffffff !important;
 				box-shadow: none;
 			}
