--- a/unified_summ/assets/css/main.css
+++ b/unified_summ/assets/css/main.css
@@ -1913,6 +1913,7 @@
 		line-height: 3em;
 		min-width: 9.25em;
 		padding: 0 1.5em;
+		margin-right: 0.25em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -3535,7 +3536,8 @@
 		#main button,
 		#main .button {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 1px #dddddd;
+			/*box-shadow: inset 0 0 0 1px #dddddd;*/
+			border: solid 1px #dddddd;
 			color: #636363 !important;
 		}
 
@@ -3544,7 +3546,7 @@
 			#main input[type="button"]:hover,
 			#main button:hover,
 			#main .button:hover {
-				background-color: rgba(222, 222, 222, 0.25);
+				background-color: rgba(222, 222, 222, 0.35);
 			}
 
 			#main input[type="submit"]:active,
@@ -3552,7 +3554,7 @@
 			#main input[type="button"]:active,
 			#main button:active,
 			#main .button:active {
-				background-color: rgba(222, 222, 222, 0.5);
+				background-color: rgba(222, 222, 222, 0.7);
 			}
 
 			#main input[type="submit"].icon:before,
@@ -3560,7 +3562,8 @@
 			#main input[type="button"].icon:before,
 			#main button.icon:before,
 			#main .button.icon:before {
-				color: rgba(99, 99, 99, 0.25);
+				/*color: rgba(99, 99, 99, 0.25);*/
+				color: #636363;
 			}
 
 			#main input[type="submit"].special,
