--- a/unified_summ/assets/css/main.css
+++ b/unified_summ/assets/css/main.css
@@ -1797,6 +1797,7 @@
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
+		text-align: left;
 	}
 
 	pre {
@@ -3505,8 +3506,20 @@
 			color: #FFAD85;
 		}
 
-		#main strong, #main b {
+		
+		#main strong{
+			color: #FFAD85;
+			font-weight: 600;
+		}
+
+		#main div .orange{
+			color: #FFAD85;
+			/*font-weight: 300;*/
+		}
+
+		#main b {
 			color: #636363;
+			font-weight: 600;
 		}
 
 		#main h1, #main h2, #main h3, #main h4, #main h5, #main h6 {
