--- a/unified_summ/assets/css/main.css
+++ b/unified_summ/assets/css/main.css
@@ -1812,6 +1812,7 @@
 			line-height: 1.75;
 			padding: 1em 1.5em;
 			overflow-x: auto;
+			text-align: left;
 		}
 
 	hr {
@@ -3533,6 +3534,7 @@
 		#main code {
 			background: rgba(222, 222, 222, 0.25);
 			border-color: #dddddd;
+			text-align: left;
 		}
 
 		#main hr {
