--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2860,6 +2860,10 @@
 			width: calc(63%);
 		}
 
+		#work_text {
+			width: calc(42%);
+		}
+
 		.features h3{
 			margin-bottom: 0;
 			font-weight: 500;
@@ -2915,6 +2919,10 @@
 				width: calc(80%);
 			}	
 
+			#work_text {
+				width: calc(53%);
+			}
+
 				.features li:nth-child(3) {
 					margin-top: 3em;
 				}
@@ -2930,6 +2938,10 @@
 			#pub_text {
 				width: calc(90%);
 			}	
+
+			#work_text {
+				width: calc(73%);
+			}
 
 
 				.features li:nth-child(3) {
@@ -2947,6 +2959,10 @@
 			#pub_text {
 				width: calc(93%);
 			}	
+
+			#work_text {
+				width: calc(90%);
+			}
 
 				.features li:nth-child(3) {
 					margin-top: 3em;
